calling llm with tools

--- a/Chatbot/pyproject.toml
+++ b/Chatbot/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "langchain>=0.3.25",
     "langchain-groq>=0.3.4",
     "langchain-openai>=0.3.27",
+    "langchain-tavily>=0.2.5",
     "langgraph>=0.4.8",
     "langsmith>=0.3.45",
     "python-dotenv>=1.1.1",
